# docassemble-mealprep

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
docassemble/catassembler/: get_repositories.py  parse_cli_args.py
docassemble/catassembler/data/questions/: advanced_dash.yml  conduct_contriuting.yml  generic_repos.yml  instagram-location-search.yml  mvp_dash.yml  nav.yml  shared.yml  test.yml
docassemble/catassembler/data/static/: al_dashboard.css
docassemble/mealprep/: get_repositories.py
docassemble/mealprep/data/questions/: advanced_dash.yml  conduct_contributing.yml  generic_repos.yml  nav.yml
docassemble/mealprep/data/static/: al_dashboard.css
